# Embedded-SQL-in-C

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  config.sh  core  puresqlrights
Release/: CMakeCache.txt  Makefile  cmake_install.cmake  puresqlrights
debian/: README.Debian  changelog  control  copyright  files  install
src/: puresqlrights.c
